--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                 
             </div>
             <div class="footer-inner">
-                <div class="footer-text">本站内容源自互联网，如有侵权，请联系删除相关内容，邮箱：k2106@foxmail.com <br/>© 2023 - 2023 By <a href="https://github.com/shenweiyan/WebStack-Hugo">WebStack-Hugo</a> | <a href="https://space.bilibili.com/441864450">Kevin_2106</a> | <a href="http://beian.miit.gov.cn/">粤ICP备16023717号</a><br/></div>
+                <div class="footer-text">本站内容源自互联网，如有侵权，请联系删除相关内容，邮箱：k2106@foxmail.com <br/>© 2023 - 2023 By <a href="https://github.com/shenweiyan/WebStack-Hugo">WebStack-Hugo</a> | <a href="https://space.bilibili.com/441864450">Kevin_2106</a> | <br/></div>
             </div>
         </footer>
     </div>
