--- a/index.html
+++ b/index.html
@@ -296,21 +296,14 @@
 
 
 <div class="header-big  post-top css-color mb-4" id="search-bg" style="height:33vh">
-    <video id="background_video" loop muted></video>
+    <video id="background_video" loop muted autoplay playsinline></video>
     <div id="video_cover"></div>
     <div id="overlay">
         <button onclick="unmute()" id="unmute" style="position: absolute; bottom: 1px; right:1px ; display: block;">Unmute</button>
 
     </div>
 
-    <div id="video_controls">
-        <span id="play">
-        <img src="assets/bideo.js/play.png">
-        </span>
-        <span id="pause">
-        <img src="assets/bideo.js/pause.png">
-        </span>
-    </div>
+    
     <div class="s-search">
         <div id="search" class="s-search mx-auto">
             <div id="search-list-menu" class="hide-type-list">
