--- a/about/index.html
+++ b/about/index.html
@@ -131,6 +131,10 @@
 
                     <ul class="nav navbar-menu text-xs order-1 order-md-2">
                         
+                        <li class="nav-item d-md-none mobile-menu ml-3 ml-md-4">
+                            <a href="javascript:" id="sidebar-switch" data-toggle="modal"
+                                data-target="#sidebar"><i class="iconfont icon-classification icon-2x"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
