--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <ul class="navbar-nav site-menu" style="margin-right: 16px;">
                         
 			<li >
-				<a href="kivotos-gsc.top">
+				<a href="https://kivotos-gsc.top/">
                                     <i class="fa fa-home fa-lg mr-2"></i>
                                     <span>首页</span>
                                 </a>
